--- a/03-Pandas_and_DTM/01-DTM_DistinctiveWords.ipynb
+++ b/03-Pandas_and_DTM/01-DTM_DistinctiveWords.ipynb
@@ -22,7 +22,9 @@
     "    * cosine similarity\n",
     "    * LDA\n",
     "\n",
-    "Today, we'll start with the Document Term Matrix (DTM). The DTM is the bread and butter of most computational text analysis techniques, both simple and more sophisticated methods. In this lesson we will use Python's scikit-learn package learn to make a document term matrix from a .csv Music Reviews dataset (collected from MetaCritic.com). We will visualize the DTM in a pandas dataframe. We will then use the DTM and a word weighting technique called tf-idf (term frequency inverse document frequency) to identify important and discriminating words within this dataset. The illustrating question: what words distinguish reviews of Rap albums, Indie Rock albums, and Jazz albums? Finally, we'll use the DTM to implement a difference of proportions calculation on two novels in our data folder.\n",
+    "Today, we'll start with the Document Term Matrix (DTM). The DTM is the bread and butter of computational text analysis techniques, both simple and more sophisticated methods. In sum, the DTM vectorizes our text which allows us to do matrix manipulation on it. We'll see further uses of the DTM in future tutorials.\n",
+    "\n",
+    "In this lesson we will use Python's scikit-learn package learn to make a document term matrix from a .csv Music Reviews dataset (collected from MetaCritic.com). We will visualize the DTM in a pandas dataframe. We will then use the DTM and a word weighting technique called tf-idf (term frequency inverse document frequency) to identify important and discriminating words within this dataset. The illustrating question: what words distinguish reviews of Rap albums, Indie Rock albums, and Jazz albums? Finally, we'll use the DTM to implement a difference of proportions calculation on two novels in our data folder.\n",
     "\n",
     "  \n",
     "\n",
@@ -46,7 +48,7 @@
     "          -TfidfVectorizer function\n",
     "  <li>[Identifying Distinctive Words 1](#distinct)</li>\n",
     "          -Application: Identify distinctive words by genre\n",
-    "   <li>[Identifying Distinctive Words 2](#dop)</li>\n",
+    "   <li>[Identifying Distinctive Words 2 (if time)](#dop)</li>\n",
     "          -Difference of Proportions    \n",
     "         \n",
     "</ol>\n",
@@ -163,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our next step is to turn the text into a document term matrix using the scikit-learn function called CountVectorizer. There are two ways to do this. We can turn it into a sparse matrix type, which can be used within scikit-learn for further analyses. We do this using the fit_transform() function from CountVectorizer.\n",
+    "Our next step is to turn the text into a document term matrix using the scikit-learn function called CountVectorizer. There are two ways to do this. We can turn it into a sparse matrix type, which can be used within scikit-learn for further analyses. We do this by \"fitting\" the text to our CountVectorizer object, which calculates the full vocabulary in our corpus, and then \"transform\" our text by counting the number of times each word occurs in each docuent. We combine these two steps by calling the `fit_transform()` function.\n",
     "\n",
     "[Let's first look at the documentation for CountVectorizer](http://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.CountVectorizer.html)."
    ]
@@ -177,6 +179,7 @@
     "#import the function CountVectorizer\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
+    "#Create our CountVectorizer object\n",
     "countvec = CountVectorizer()\n",
     "\n",
     "sklearn_dtm = countvec.fit_transform(df.body)\n",
@@ -187,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How do we know what each number indicates? We can access the words themselves through the CountVectorizer function get_feature_names."
+    "How do we know what word corresponds to each number? We can access the words themselves through the CountVectorizer function `get_feature_names()`."
    ]
   },
   {
@@ -307,6 +310,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -333,7 +337,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(dtm_tfidf_df.max().sort_values(ascending=False)[:20])"
@@ -367,6 +373,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -392,7 +399,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#pull out the reviews for three genres, Rap, Alternative/Indie Rock, and Jazz\n",
@@ -445,7 +454,7 @@
    "metadata": {},
    "source": [
     "<a id='dop'></a>\n",
-    "### 6. Difference of proportions"
+    "### 6. Difference of proportions (if time, otherwise work through on your own)"
    ]
   },
   {
@@ -462,7 +471,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import nltk\n",
@@ -488,7 +499,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "novels_df = pandas.DataFrame(countvec.fit_transform(text_list).toarray(), columns=countvec.get_feature_names())\n",
@@ -509,7 +522,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "novels_df['word_count'] = novels_df.sum(axis=1)\n",
@@ -526,7 +541,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "novels_df = novels_df.iloc[:,:].div(novels_df.word_count, axis=0)\n",
@@ -543,7 +560,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "novels_df.loc[2] = novels_df.loc[0] - novels_df.loc[1]\n",
@@ -560,7 +579,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "novels_df.loc[2].sort_values(ascending=False)"
@@ -580,7 +601,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#change stop_words option to 'english\n",
@@ -606,7 +629,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Change max_df option to 1\n",
