--- a/05-TextExploration/02-VectorSpaceModel.ipynb
+++ b/05-TextExploration/02-VectorSpaceModel.ipynb
@@ -18,13 +18,12 @@
     "\n",
     "### Outline\n",
     "\n",
-    "<ol start=\"0\">\n",
-    "  <li>[Vectorizing our text: The Sparse DTM to Numpy Array](#vector)</li>\n",
-    "  <li>[Comparing Texts](#compare)</li>\n",
-    "  <li>[Visualizing Distance](#visual)</li>\n",
-    "  <li>[Clustering Text based on Distance Metrics (if time)](#cluster)</li>\n",
-    "  <li>[K-Means Clustering (if time)](#kmeans)</li>\n",
-    "</ol>\n",
+    "* [Vectorizing our text: The Sparse DTM to Numpy Array](#vector)\n",
+    "* [Comparing Texts](#compare)\n",
+    "* [Visualizing Distance](#visual)\n",
+    "* [Clustering Text based on Distance Metrics (if time)](#cluster)\n",
+    "* [K-Means Clustering (if time)](#kmeans)\n",
+    "\n",
     "\n",
     "### Key Terms\n",
     "\n",
@@ -60,7 +59,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np \n",
@@ -80,7 +81,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "dtm = dtm.toarray()  # convert to a regular, dense array\n",
@@ -137,7 +140,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.metrics.pairwise import euclidean_distances\n",
@@ -171,7 +176,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.metrics.pairwise import cosine_similarity\n",
@@ -212,7 +219,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os  # for os.path.basename\n",
@@ -268,7 +277,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from scipy.cluster.hierarchy import ward, dendrogram\n",
@@ -301,7 +312,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.cluster import KMeans\n",
@@ -315,7 +328,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "list(zip(filenames, clusters.labels_))"
@@ -324,7 +339,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"Top terms per cluster:\")\n",
