--- a/05-TextExploration/00-IntroductionToTopicModeling.ipynb
+++ b/05-TextExploration/00-IntroductionToTopicModeling.ipynb
@@ -17,14 +17,14 @@
     "* Think though how and why you might use topic modeling in a text analysis project\n",
     "\n",
     "### Outline\n",
-    "<ol start=\"0\">\n",
-    "  <li>[The Pandas Dataframe: Music Reviews](#df)</li>\n",
-    "  <li>[Fit an LDA Topic Model using scikit-learn](#fit)</li>\n",
-    "  <li>[Document by Topic Distribution](#dtd)</li>\n",
-    "  <li>[Words Aligned with each Topic](#words)</li>\n",
-    "  <li>[Topic Prevalence](#prev)</li>\n",
-    "   <li>[Topics Over Time](#time)</li>\n",
-    "</ol>\n",
+    "\n",
+    "* [The Pandas Dataframe: Music Reviews](#df)\n",
+    "* [Fit an LDA Topic Model using scikit-learn](#fit)\n",
+    "* [Document by Topic Distribution](#dtd)\n",
+    "* [Words Aligned with each Topic](#words)\n",
+    "* [Topic Prevalence](#prev)\n",
+    "* [Topics Over Time](#time)\n",
+    "\n",
     "\n",
     "### Key Terms\n",
     "* *Topic Modeling*:\n",
@@ -57,6 +57,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -124,7 +125,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Vectorize our text using CountVectorizer\n",
@@ -140,7 +143,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"Fitting LDA models with tf features, \"\n",
@@ -161,7 +166,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#print the top words per topic, using the function defined above.\n",
@@ -209,7 +216,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "topic_dist = lda.transform(tf)\n",
@@ -226,7 +235,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "topic_dist_df = pandas.DataFrame(topic_dist)\n",
@@ -248,6 +259,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -259,6 +271,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -297,6 +310,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -310,7 +324,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#multiple topic weight by word count\n",
@@ -333,7 +349,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "topic_columns = range(0, n_topics)\n",
@@ -409,7 +427,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "grouped_year = df_w_topics.groupby('year')\n",
