--- a/00-Introduction/Installation_Check.ipynb
+++ b/00-Introduction/Installation_Check.ipynb
@@ -39,9 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
@@ -59,9 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -87,9 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%pylab inline"
@@ -107,9 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "nltk_data = [\"punkt\", \"words\", \"stopwords\", \"averaged_perceptron_tagger\", \"maxent_ne_chunker\", 'wordnet']\n",
@@ -127,15 +119,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# every line that starts with a hash is a comment\n",
     "# the computer ignores these lines, they are meant to address a human reader\n",
     "# here is some starter code to make sure everything is set up (don't worry about understanding everything here)\n",
-    "for line in open('../Data/Austen_PrideAndPrejudice.txt'):\n",
+    "for line in open('../Data/Austen_PrideAndPrejudice.txt', encoding='utf-8'):\n",
     "    for word in line.split():\n",
     "        if word.endswith('ing'):\n",
     "            print(word)"
