--- a/01-IntroToPython/01-WorkingWithTexts_ExerciseSolutions.ipynb
+++ b/01-IntroToPython/01-WorkingWithTexts_ExerciseSolutions.ipynb
@@ -31,8 +31,8 @@
    },
    "outputs": [],
    "source": [
-    "austen_string = open('../Data/Austen_PrideAndPrejudice.txt').read()\n",
-    "alcott_string = open('../Data/Alcott_GarlandForGirls.txt').read()"
+    "austen_string = open('../Data/Austen_PrideAndPrejudice.txt', encoding='utf-8').read()\n",
+    "alcott_string = open('../Data/Alcott_GarlandForGirls.txt', encoding='utf-8').read()"
    ]
   },
   {
@@ -64,7 +64,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#How many words are in each novel?\n",
@@ -84,7 +86,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#How many words in each novel appear in title case?\n",
@@ -104,7 +108,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "austen_word_length = [len(word) for word in austen_words]\n",
@@ -127,7 +133,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "##     How many words longer than 7 characters are in each novel? (don't worry about punctuation for now)\n",
