--- a/02-IntroToNLP/00-IntroToNLP.ipynb
+++ b/02-IntroToNLP/00-IntroToNLP.ipynb
@@ -61,7 +61,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#assign the desired sentence to the variable called 'sentence.'\n",
@@ -95,7 +97,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#First import the Python package nltk (Natural Language Tool Kit)\n",
@@ -128,7 +132,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#The number of tokens is the length of the list, or the number of elements in the list\n",
@@ -152,7 +158,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import string\n",
@@ -175,7 +183,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sentence_tokens_clean = [word for word in sentence_tokens if word not in punctuations]\n",
@@ -192,7 +202,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "set(sentence_tokens_clean)"
@@ -208,7 +220,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "##EX: Print the type-token ratio for this sentence\n",
@@ -228,7 +242,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#apply the nltk function FreqDist to count the number of times each token occurs.\n",
@@ -241,7 +257,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#print out the 10 most frequent words using the function most_common\n",
@@ -279,7 +297,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sentence_tokens_clean_lc = [word.lower() for word in sentence_tokens_clean]\n",
@@ -291,11 +311,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "#Ex: Calculate the type-token ratio for the sentence after you have changed everything to lowercase\n",
-    "print(len(set(sentence_tokens_clean_lc))/len(sentence_tokens_clean_lc))"
+    "#Ex: Calculate the type-token ratio for the sentence after you have changed everything to lowercas"
    ]
   },
   {
@@ -308,7 +329,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#import the stopwords list\n",
