--- a/02-IntroToNLP/00-IntroToNLP.ipynb
+++ b/02-IntroToNLP/00-IntroToNLP.ipynb
@@ -225,8 +225,7 @@
    },
    "outputs": [],
    "source": [
-    "##EX: Print the type-token ratio for this sentence\n",
-    "print(len(set(sentence_tokens_clean))/len(sentence_tokens_clean))"
+    "##EX: Print the type-token ratio for this sentence"
    ]
   },
   {
